[package]
name = "liveview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["ws"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
dioxus = { version = "0.2.4" }
dioxus-liveview = { version = "0.1.0", features = ["axum"] }
pretty_env_logger = "0.4.0"
timer = "0.2.0"
